Adding individual styles and refactoring the Article structure

--- a/src/components/PostItem.css
+++ b/src/components/PostItem.css
@@ -1,14 +1,15 @@
 .postItem {
-  margin: 2rem;
   padding: 1rem;
+  margin-bottom: 1.5rem;
   background: #fff;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   border-radius: 10px;
 }
 
 .postItem > h1 {
+  font-size: 1.5rem;
   margin-bottom: 1rem;
+  text-align: left;
+  color: #0784d2;
 }
