--- a/src/pages/Articles.css
+++ b/src/pages/Articles.css
@@ -1,21 +1,10 @@
-main {
+.Articles {
   margin: auto;
   max-width: 1200px;
-  padding: 2rem 1rem;
+  padding: 1rem 2rem;
 }
 
-main > h1 {
+.Articles > h1 {
   text-align: center;
-}
-
-.Articles__button {
-  background-color: #0784d2;
-  border: 1px solid #dcdcdc;
-  color: #fff;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.Articles__button:hover {
-  background-color: #0e94e8;
+  margin-bottom: 2rem;
 }
