--- a/src/components/AddArticle.css
+++ b/src/components/AddArticle.css
@@ -6,7 +6,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
 }
 
 .AddArticle input {
@@ -14,28 +13,10 @@
   margin: 1rem auto;
   width: calc(100% - 1rem);
   padding: 0.5rem;
-  border: 1px solid #0784d2;
-  border-radius: 10px;
+  border: 1px solid #1aab8a;
   outline: none;
 }
 
 .AddArticle button {
-  width: 21rem;
-  padding: 0.7rem;
-  border: 1px solid #0784d2;
-  background: #0784d2;
-  color: #fff;
-  border-radius: 20px;
-  cursor: pointer;
-  outline: none;
-}
-
-.AddArticle button:hover {
-  background: #0e94e8;
-}
-
-.AddArticle button:disabled {
-  background: #d8d8d8;
-  border: 1px solid #d8d8d8;
-  cursor: not-allowed;
+  align-self: flex-end;
 }
