--- a/src/components/PostItem.css
+++ b/src/components/PostItem.css
@@ -1,4 +1,4 @@
-.postItem {
+.PostItem {
   padding: 1rem;
   margin-bottom: 1.5rem;
   background: #fff;
@@ -7,9 +7,9 @@
   border-radius: 10px;
 }
 
-.postItem > h1 {
+.PostItem > h1 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
   text-align: left;
-  color: #0784d2;
+  color: #1aab8a;
 }
